# task_server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
db/: Cargo.toml
db/src/: main.rs  models.rs
migrations/: 20220720150509_tasks.sql  20220720160322_rename_column.sql  20220720161208_alter_field_not_null.sql  20220721133600_insert1.sql
server/: Cargo.toml
server/src/: main.rs
src/: db.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
