[package]
name = "task_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
anyhow = "1.0.34"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dotenv="0.15.0"
chrono={version="0.4.19", features=["serde"]}
sqlx = { version = "0.5" , features = ["postgres", "offline", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }