[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.5", features = ["postgres", "offline", "runtime-tokio-native-tls", "chrono", "json"] }
once_cell = "1.10.0"